# champ

./: .circleci.yml  .compile_mac.zsh.swp  .gitignore  .gitmodules  .swp  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakeLists_BACKUP_6567.txt  CMakeLists_REMOTE_6567.txt  CODEOWNERS  Code_of_conduct.md  Contributing.md  Doxyfile  Makefile  README.md  clean-compile  clean-compile-gnu  common_objects  compile  compile-fujitsu  compile-gnu  compile-gnu.macos  compile-gpu-test.qmckl  compile-intel  compile-intel.debug  compile-intel.qmckl  compile-intel.solids  compile-nvc.qmckl_test  compile-nvfortran  compile.sh  compile.zsh  compile_ubuntu.sh  davidson.f90  davidson_wrap.f90  nvhpc.sh  self_hosted_build_champ.yml  settings.make.local
dmc/: CMakeLists.txt  Makefile  acues1.f  acues1_gpop.f  acues1_reduce.f  acuest.f  averages.f  dmc.f  dmc_good_ps_mov1.f  dmc_ps_mov1.f  dumper.f  finwrt.f  init.f  main.f  mc_configs.f  mmpol_dmc.f  multideterminant_tmove.f  optwf_dummy.f  pcm_dmc.f  redistribute.f  splitj.f  walksav_det.f  walksav_jas.f
dmc/MPI/: 0Info  CMakeLists.txt  Makefile  acues1_reduce.f  acuest.f  dumper.f  finwrt.f  main.f  mc_configs.f  mmpol_reduce.f  pcm_reduce.f  prop_reduce.f
dmc/MPI_global_pop/: 0Info  CMakeLists.txt  Makefile  acues1_reduce.f  dumper.f  finwrt.f  main.f  optwf_dummy.f  prop_mpi.f  redistribute.f  walksav_det.f  walksav_jas.f
dmc/MPI_global_pop_big/: CMakeLists.txt  Makefile  acuest.f  dumper.f  main.f  mmpol_mpi.f  move_walker.f  pcm_mpi.f  walksav_det.f
dmc/MPI_merge/: CMakeLists.txt  dumper_gpop.f  init.f  main.f  move_walker.f  redistribute.f  restart.f
lib/: CMakeLists.txt  Makefile  README.md  deriv.f  divergence.f  grater.f  hartre.f  hartre_grid2.f  intpol_monot.f  my_second.f  settings.make  simson.f  test.f  test2.f
lib/cyrus/: 0Changes  CMakeLists.txt  bode.f  bode_grid2.f  deriv2.f  deriv2_grid2.f  deriv_grid2.f  divergence_grid2.f  fderiv.f  fderiv_grid2.f  grater.f  intpol.f  lapla3.f  laplac.f  laplac_grid2.f  locate.f  my_second.f  my_second.f.xlf  ranf.f  shelln.f  shellnn.f  test  test2
lib/pspline/: CMakeLists.txt  Makefile.orig  bcspeval.f  bcspline.f  fvtricub.f  ibc_ck.f  mktricub.f  original.tar  r8bcspeval.f  r8bcspline.f  r8fvtricub.f  r8fvtricub_orig.f  r8mktricub.f  r8tcspeval.f  r8tcspline.f  splinck.f  tcspeval.f  tcspline.f
lib/slatec/: CMakeLists.txt  listfin  try
lib/trexio/: CMakeLists.txt
lib2/pspline/: CMakeLists.txt  Makefile  fvtricub.f  mktricub.f  mktricubw.f  r8fvtricub_orig.f  r8mktricubw.f  r8splinck.f  r8v_spline.f  r8zonfind.f  v_spline.f  zonfind.f
src/: CMakeLists.txt  INFO.md
src/dmc/: CMakeLists.txt  acues1.f  acues1.f90  acues1_gpop.f  acues1_gpop.f90  acues1_reduce.f  acues1_reduce.f90  acuest.f  acuest.f90  acuest_gpop.f  acuest_gpop.f90  assignment.f90  averages.f  averages.f90  branching.f90  dmc.f  dmc.f90  dmc_ae_mov1.f90  dmc_ps_mov1.f  dmc_ps_mov1.f90  dmc_restore_hdf5.f90  dmc_store_hdf5.f90  dumper.f  dumper.f90  dumper_gpop.f  dumper_gpop.f90  finwrt.f  finwrt.f90  gauss.f  gauss.f90  hpsiedmc.f  hpsiedmc.f90  init.f  init.f90  main.f  main.f90  mc_configs.f  mc_configs.f90  mmpol_dmc.f  mmpol_dmc.f90  (+33 more)
src/include/: 3dgrid.h  3dgrid_flags.h  3dgrid_lagrange.h  basis.h  dmc.h  efield.h  embed.h  ewald.h  force.h  inputflags.h  mmpol.h  mpi_qmc.h  mstates.h  optci.h  optci_cblk.h  optjas.h  optorb.h  optorb_cblk.h  pcm.h  pcm_3dgrid.h  prop_dmc.h  prop_vmc.h  properties.h  pseudo.h  sr.h  vmc.h
src/input/: end.p2  inpt.awk  p2_defaults.f  p2etc.f  p2nmcheck.f  p2prog.f
src/module/: CMakeLists.txt  m_allocation.f90  m_atom.f90  m_backflow.f90  m_basis.f90  m_coefs.f90  m_common.f90  m_constant.f90  m_constants.f90  m_control.f90  m_denupdn.f90  m_deriv.f90  m_det.f90  m_dmc.f90  m_efield.f90  m_error.f90  m_estimators.f90  m_ewald.f90  m_force.f90  m_force_analytic.f90  m_force_pth.f90  m_fssd.f90  m_gradhess.f90  m_grdnt.f90  m_grid.f90  m_input.f90  m_jastrow.f90  m_metropolis.f90  m_mixderiv.f90  m_mmpol.f90  m_mpi.f90  m_mstates.f90  m_multiple_geo.f90  m_optci.f90  m_optorb.f90  m_optwf.f90  m_optwf_func.f90  m_pathak.f90  m_pcm.f90  m_periodic_table.F90  (+17 more)
src/parser/: CMakeLists.txt  LICENSE  fdf.F90  io_fdf.F90  parse.F90  prec.F90  utils.F90
src/shared/: CMakeLists.txt  basis_fns.f  determinante.f  determinante_psit.f  detsav.f  finwrt_more.f  gammai.f  hpsie.f  jassav.f  mmpol.f  multideterminant.f  multiply_slmi_mderiv.f  new_parser_read_data.f90  nonloc.f  nonlpsi.f  optci.f  optci_reduce.f  optgeo_convcartzmat.f90  optgeo_coords_int.f90  optwf_handle_wf.f  optwf_lin_matrix.f  optx_jas_ci.f  optx_jas_ci_reduce.f  parser.f90  pcm_3dgrid.f  pw_ewald.f  pw_orbitals_e.f  pw_placeholder.f  qmmm_density.f90  qmmm_writecube.f90  rannyu.f  set_input_data.f90  sites.f  slm.f  spline2.f  write_orb_loc.f
src/vmc/: .3dgrid_orbitals.f.swp  .langev.f90.swn  .langev.f90.swo  .metrop_mov1_slat.f.swp  .optjas.f.swp  3dgrid.f  3dgrid.f90  3dgrid_orbitals.f  3dgrid_orbitals.f90  CMakeLists.txt  acuest.f  acuest.f90  acuest_reduce.f  acuest_reduce.f90  acuest_write.f  acuest_write.f90  all.p2  array_resize_utils.f90  array_utils.f90  ase.f90  atom_masses.f90  backflow.f90  basis_fns.f  basis_fns.f90  basis_fns_vgl.f  basis_fnse_v.f  basis_fnse_vg.f  basis_fnse_vgl.f  basis_norm.f  bxmatrices.f  bxmatrices.f90  clean_use  commands.p2  cuspexact4.f  cuspexact4.f90  cuspinit4.f  cuspinit4.f90  davidson.f90  davidson_wrap.f90  deriv_jastrow.f  (+340 more)
tests/unit_test/: CMakeLists.txt  env.f90  run_tests.sh  test_jastrow.f90  (+6 more)
vmc/: 3dgrid_orbitals.f  CMakeLists.txt  Makefile  acuest.f  acuest_reduce.f  all.p2  array_utils.f90  basis_fns_vgl.f  basis_fnse_v.f  basis_fnse_vg.f  commands.p2  convcartzmat.f90  coords_int.f90  cuspinit4.f  davidson.f90  davidson_wrap.f90  deriv_jastrow4.f  deriv_nonlpsi.f  determinant.f  determinant_psit.f  determinante.f  determinante_psit.f  detsav.f  distances.f  dl.f  dl_iter.f  dl_more.f  dumper.f  dumper_more.f  error.f  fetch_parameters.f  fin_reduce.f  finwrt.f  finwrt_more.f  force_analytic.f  hpsi.f  hpsie.f  jastrow.f  jastrow4e.f  jastrowe.f  (+68 more)
(+1408 files in other folders)
